--- a/Backend/Persistance/package.json
+++ b/Backend/Persistance/package.json
@@ -10,5 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.821.0"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.20",
+    "typescript": "^4.1.3"
   }
 }
