--- a/Backend/web-api/.env
+++ b/Backend/web-api/.env
@@ -1,6 +1,12 @@
+### COGNITO CONFIG
 COGNITO_USER_POOL_ID=us-east-1_5KAMk19Yx
 COGNITO_CLIENT_ID=4qkatbqtpu4bsv25b27cffvtjv
 COGNITO_REGION=us-east-1
 COGNITO_CODE_REDIRECT=http://localhost:8080/login
 COGNITO_TOKEN_URL=https://pwr-psi.auth.us-east-1.amazoncognito.com
 COGNITO_LOGOUT_REDIRECT=http://localhost:8080
+### AWS CONFIG
+AWS_REGION=us-east-1
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_SESSION_TOKEN=
