--- a/Backend/Persistance/package.json
+++ b/Backend/Persistance/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc Utils\\main.ts",
+    "start": "cd Utils && node main.js"
   },
   "author": "",
   "license": "ISC",
