added compression package

--- a/Backend/web-api/package.json
+++ b/Backend/web-api/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-express": "^7.5.1",
     "amazon-cognito-identity-js": "^4.5.6",
     "aws-sdk": "^2.821.0",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "jwks-rsa": "^1.12.1",
     "passport": "^0.4.1",
