--- a/Backend/web-api/package.json
+++ b/Backend/web-api/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-express": "^7.5.1",
     "amazon-cognito-identity-js": "^4.5.6",
     "aws-sdk": "^2.821.0",
+    "cache-manager": "^3.4.0",
     "cookie-parser": "^1.4.5",
     "jwks-rsa": "^1.12.1",
     "passport": "^0.4.1",
@@ -41,6 +42,7 @@
     "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^7.1.3",
     "@nestjs/testing": "^7.5.1",
+    "@types/cache-manager": "^2.10.3",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
