--- a/Backend/Persistance/package.json
+++ b/Backend/Persistance/package.json
@@ -11,7 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.821.0"
+    "aws-sdk": "^2.821.0",
+    "date-fns": "^2.16.1"
   },
   "devDependencies": {
     "@types/node": "^14.14.20",
