--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "build:docker": "docker build -t psi-%npm_package_version% ."
   },
   "dependencies": {
     "axios": "^0.21.1",
