--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,10 @@
 version: '2.2'
 
+networks:
+ internal:
+   driver: bridge
+   internal: true
 services:
-
   backend:
     build: 
       context: .
@@ -10,3 +13,8 @@ services:
     container_name: backend
     ports: 
         - 3000:3000
+  frontend:
+    build: ./frontend
+    container_name: frontend
+    ports:
+    - 8080:8080
