--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -1,15 +1,13 @@
 FROM node:lts-alpine AS builder
-WORKDIR /backend/web-api
-ADD ./package.json ./package.json
+WORKDIR /app
 ADD . .
-RUN npm install
-RUN cd ../Persistance
-ADD . /backend/Persistance
-RUN cd /backend/Persistance && npm install && cd -
-RUN npm run build
+RUN cd ./Persistance && npm install
+RUN cd ./web-api && npm install && npm build
 
 FROM node:lts-alpine
-WORKDIR /backend/web-api
-COPY --from=builder /backend/web-api ./
+WORKDIR /app
+COPY --from=builder /app/web-api/dist ./
+COPY --from=builder /app/web-api/node_modules ./
+COPY --from=builder /app/web-api/package.json ./
 EXPOSE 3000
 CMD ["npm", "run", "start:prod"]
