--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -6,7 +6,7 @@ RUN cd ./web-api && npm install && npm build
 
 FROM node:lts-alpine
 WORKDIR /app
-COPY --from=builder /app/web-api/dist ./web.api/dist
+COPY --from=builder /app/web-api/dist ./web-api/dist
 COPY --from=builder /app/web-api/node_modules ./web-api/node-modules
 COPY --from=builder /app/web-api/package.json ./web-api/package.json
 EXPOSE 3000
