--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -7,7 +7,8 @@ RUN cd ./web-api && npm install && npm build
 FROM node:lts-alpine
 WORKDIR /app
 COPY --from=builder /app/web-api/dist ./web-api/dist
-COPY --from=builder /app/web-api/node_modules ./web-api/node-modules
+COPY --from=builder /app/web-api/node_modules ./web-api/node_modules
 COPY --from=builder /app/web-api/package.json ./web-api/package.json
+COPY --from=builder /app/web-api/.env ./web-api/.env
 EXPOSE 3000
-CMD ["npm", "run", "start:prod"]
+CMD cd ./web-api && npm run start:prod
