--- a/Backend/web-api/.env
+++ b/Backend/web-api/.env
@@ -3,7 +3,7 @@ COGNITO_USER_POOL_ID=us-east-1_07HI0Mli7
 COGNITO_CLIENT_ID=3gfjgnf29ngqvsp52pqmc1dn7f
 COGNITO_REGION=us-east-1
 COGNITO_CODE_REDIRECT=http://51.83.129.128:8080/login
-COGNITO_TOKEN_URL=http://51.83.129.128:8080
+COGNITO_TOKEN_URL=https://pwr-psi.auth.us-east-1.amazoncognito.com
 COGNITO_LOGOUT_REDIRECT=http://51.83.129.128:8080
 ### AWS CONFIG
 AWS_REGION=us-east-1
