--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,21 +1,16 @@
-FROM node:lts-alpine
-
-# install simple http server for serving static content
-RUN npm install -g http-server
-
-# make the 'app' folder the current working directory
-WORKDIR /app
-
-# copy both 'package.json' and 'package-lock.json' (if available)
-COPY package*.json ./
-
-# install project dependencies
-RUN npm install
-
-# copy project files and folders to the current working directory (i.e. 'app' folder)
+FROM node:lts-alpine as builder
+WORKDIR /build
 COPY . .
+RUN yarn
+RUN yarn build
 
-# build app for production with minification
-RUN npm run build
+FROM node:lts-alpine
+RUN npm install -g http-server
+WORKDIR /app
+COPY --from=builder /build/dist ./dist
 
-CMD [ "node", "server.js" ]
+EXPOSE $PORT
+CMD if [ "$SSL" == "true" ]; \
+  then http-server dist -p $PORT -S -C $SSL_CERT -K $SSL_KEY; \
+  else http-server dist -p $PORT; \
+  fi
