--- a/Backend/web-api/.env
+++ b/Backend/web-api/.env
@@ -1,6 +1,7 @@
 ### COGNITO CONFIG
 COGNITO_USER_POOL_ID=us-east-1_07HI0Mli7
 COGNITO_CLIENT_ID=3gfjgnf29ngqvsp52pqmc1dn7f
+COGNITO_CLIENT_SECRET=8ecduu7h030onfn859q8das34kkamoao6aku9562r47n5ag3g2f
 COGNITO_REGION=us-east-1
 COGNITO_CODE_REDIRECT=https://51.83.129.128:8080/login
 COGNITO_TOKEN_URL=https://nowa-edukacja.auth.us-east-1.amazoncognito.com
