--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,1 +1,2 @@
 VUE_APP_API_URL=/api
+VUE_APP_AWS_LOGIN_URL=https://pwr-psi.auth.us-east-1.amazoncognito.com/login?client_id=4qkatbqtpu4bsv25b27cffvtjv&response_type=code&scope=openid+profile&redirect_uri=http://localhost:8080/login
