--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,2 @@
 VUE_APP_API_URL=http://localhost:3000/api
+VUE_APP_AWS_LOGIN_URL=https://nowa-edukacja.auth.us-east-1.amazoncognito.com/login?client_id=3gfjgnf29ngqvsp52pqmc1dn7f&response_type=code&scope=openid+profile&redirect_uri=https://51.83.129.128:8080/login
