--- a/Backend/Persistance/package.json
+++ b/Backend/Persistance/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc Utils\\main.ts",
+    "build": "cd Utils && tsc main.ts",
     "start": "cd Utils && node main.js"
   },
   "author": "",
