--- a/Backend/web-api/package.json
+++ b/Backend/web-api/package.json
@@ -32,6 +32,7 @@
     "cookie-parser": "^1.4.5",
     "date-fns": "^2.16.1",
     "jwks-rsa": "^1.12.1",
+    "lodash": "^4.17.20",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
@@ -46,6 +47,7 @@
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
     "@types/jwk-to-pem": "^2.0.0",
+    "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.6",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
