--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -9,7 +9,7 @@ WORKDIR /app
 COPY --from=builder /app/web-api/dist ./web-api/dist
 COPY --from=builder /app/web-api/node_modules ./web-api/node_modules
 COPY --from=builder /app/web-api/package.json ./web-api/package.json
-COPY --from=builder /app/web-api/.env ./web-api/.env
+COPY --from=builder /app/web-api/.env.production ./web-api/.env.production
 COPY --from=builder /app/certs ./certs
 
 EXPOSE 3000
